# Slicer-LiverAnalysis

./: CMakeLists.txt
.circleci/: config.yml
Docker/: Dockerfile
Docker/Alive-build/: Dockerfile
Liver/: Liver.py
LiverAnalysis/: CMakeLists.txt  qSlicerLiverAnalysisModule.cxx  qSlicerLiverAnalysisModule.h
LiverAnalysis/Logic/: CMakeLists.txt  vtkSlicerLiverAnalysisLogic.cxx  vtkSlicerLiverAnalysisLogic.h
LiverAnalysis/MRML/: CMakeLists.txt  vtkMRMLMarkupsBezierSurfaceNode.cxx  vtkMRMLMarkupsBezierSurfaceNode.h  vtkMRMLResectionInitializationDisplayNode.h  vtkMRMLResectionInitializationNode.h  vtkMRMLResectionSurfaceNode.cxx  vtkMRMLResectionSurfaceNode.h
LiverAnalysis/MRMLDM/: CMakeLists.txt  vtkMRMLLiverAnalysisMarkupsDisplayableManager.cxx  vtkMRMLLiverAnalysisMarkupsDisplayableManager.h  vtkMRMLResectionInitializationDisplayableManager3D.h
LiverAnalysis/SubjectHierarchyPlugins/: CMakeLists.txt  qSlicerSubjectHierarchyLiverAnalysisPlugin.cxx  qSlicerSubjectHierarchyLiverAnalysisPlugin.h
LiverAnalysis/VTKWidgets/: CMakeLists.txt  vtkBezierSurfaceSource.h  vtkBezierSurfaceWidget.h  vtkLineWidget3.h  vtkResectionSurfaceWidget.h  vtkSlicerBezierSurfaceRepresentation2D.cxx  vtkSlicerBezierSurfaceRepresentation2D.h  vtkSlicerBezierSurfaceRepresentation3D.cxx  vtkSlicerBezierSurfaceRepresentation3D.h  vtkSlicerBezierSurfaceWidget.cxx  vtkSlicerBezierSurfaceWidget.h
LiverMarkups/: CMakeLists.txt  qSlicerLiverMarkupsModule.cxx  qSlicerLiverMarkupsModule.h
LiverMarkups/Logic/: vtkSlicerLiverMarkupsLogic.cxx  vtkSlicerLiverMarkupsLogic.h
(+29 files in other folders)
